--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -33,5 +33,17 @@
     height: 40px;
 }
 
+@media screen and (max-width: 700px) {
+    .navbar-container > img {
+        display: none;
+    }
 
-
+    .navbar-container > p {
+        color: aliceblue;
+        padding: 3px 3px 3px 3px;
+        margin: 10px 10px 10px 10px;
+        border: 1px solid #2000ff;
+        transition: 0.2s;
+        cursor: pointer;
+    }
+  }
